--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello coursera</h1>
+<h1>It's a good course!</h1>
+<h2>Let's try another header</h2>
 </body>
 </html>
