More small changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>It's a good course!</h1>
-<h2>Let's try another header</h2>
+<h3>Let's try another header</h3>
+<h5>Even smaller header!</h5>
 </body>
 </html>
